[gd_scene load_steps=10 format=3 uid="uid://bs061wl5df2sd"]

[ext_resource type="Script" path="res://screens/battle/views/combatant_thumbnail/combatant_thumbnail.gd" id="1_hgi73"]
[ext_resource type="TileSet" uid="uid://cxbr8p4cloyh3" path="res://assets/hud/overlay.tres" id="2_37b2s"]
[ext_resource type="SpriteFrames" uid="uid://cs2hy8mpketdk" path="res://assets/combatant/playerSprites_ [version 1.0]/fPlayer_ [dwarf].tres" id="2_xcx0j"]
[ext_resource type="Theme" uid="uid://cgj53xbuypu2k" path="res://assets/theme/theme.tres" id="4_xrr6q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqarc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lpr20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ntn7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3emub"]

[sub_resource type="Theme" id="Theme_w8i1c"]
Button/styles/focus = SubResource("StyleBoxEmpty_uqarc")
Button/styles/hover = SubResource("StyleBoxEmpty_lpr20")
Button/styles/normal = SubResource("StyleBoxEmpty_ntn7m")
Button/styles/pressed = SubResource("StyleBoxEmpty_3emub")

[node name="Button" type="Button"]
custom_minimum_size = Vector2(120, 110)
anchors_preset = -1
anchor_right = 0.125
anchor_bottom = 0.204
offset_bottom = -0.160004
size_flags_horizontal = 6
size_flags_vertical = 2
theme = SubResource("Theme_w8i1c")
script = ExtResource("1_hgi73")

[node name="CombatantThumbnail" type="VBoxContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(120, 110)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -112.08
offset_bottom = -95.9

[node name="TileMap" type="TileMap" parent="CombatantThumbnail"]
tile_set = ExtResource("2_37b2s")
rendering_quadrant_size = 10
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 393216, 1, 1, 393221, 65537, 1, 5, 65537, 0, 1, 65537, 0, 2, 65537, 0, 3, 65537, 0, 4, 65537, 0, 393217, 65537, 1, 393218, 65537, 1, 393219, 65537, 1, 393220, 65537, 1, 327685, 65537, 1, 262149, 65537, 1, 196613, 65537, 1, 131077, 65537, 1, 65541, 65537, 1, 65536, 1, 1, 131072, 1, 1, 196608, 1, 1, 262144, 1, 1, 327680, 1, 1, 65537, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 262147, 65537, 1, 327684, 65537, 1, 131073, 65537, 1, 196609, 65537, 1, 262145, 65537, 1, 327681, 65537, 1, 65538, 65537, 1, 262146, 65537, 1, 327682, 65537, 1, 65539, 65537, 1, 131075, 65537, 1, 196611, 65537, 1, 327683, 65537, 1, 65540, 65537, 1, 131076, 65537, 1, 196612, 65537, 1, 262148, 65537, 1, 11, 131073, 0, 655371, 131073, 2, 655360, 1, 2, 458752, 1, 1, 524288, 1, 1, 589824, 1, 1, 655361, 65537, 2, 655362, 65537, 2, 655363, 65537, 2, 655364, 65537, 2, 655365, 65537, 2, 655366, 65537, 2, 655367, 65537, 2, 655368, 65537, 2, 655369, 65537, 2, 655370, 65537, 2, 589835, 131073, 1, 524299, 131073, 1, 458763, 131073, 1, 393227, 131073, 1, 327691, 131073, 1, 262155, 131073, 1, 196619, 131073, 1, 131083, 131073, 1, 65547, 131073, 1, 10, 65537, 0, 9, 65537, 0, 8, 65537, 0, 7, 65537, 0, 6, 65537, 0, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 458756, 65537, 1, 524292, 65537, 1, 589828, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 65542, 65537, 1, 131078, 65537, 1, 196614, 65537, 1, 262150, 65537, 1, 327686, 65537, 1, 393222, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 589830, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, 327687, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 589831, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 65537, 1, 393224, 65537, 1, 458760, 65537, 1, 524296, 65537, 1, 589832, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 524297, 65537, 1, 589833, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 196618, 65537, 1, 262154, 65537, 1, 327690, 65537, 1, 393226, 65537, 1, 458762, 65537, 1, 524298, 65537, 1, 589834, 65537, 1)

[node name="Control" type="Control" parent="CombatantThumbnail"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="CombatantSprite" type="AnimatedSprite2D" parent="CombatantThumbnail/Control"]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_xcx0j")
animation = &"idle"
offset = Vector2(16, 16)

[node name="CombatantName" type="Label" parent="CombatantThumbnail"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("4_xrr6q")
theme_override_colors/font_color = Color(0.301961, 0.215686, 0.254902, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
text = "Ignotus the..."
horizontal_alignment = 1
autowrap_mode = 2
